# quant

./: .env.example  .gitignore  .prettierignore  AGENTS.md  AGENT_V1_CHECKLIST.md  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  tsconfig.base.json
.claude/: launch.json  settings.json
.claude/agents/: a11y-reviewer.md  code-reviewer.md  doc-updater.md  module-architect.md  (+1 more)
.codex/: hooks.json
data/: blacklist.parquet  sentiment_market.parquet  sentiment_stock.parquet  stock_metas.parquet  ta_cache.parquet
docs/: CRT Terminal - standalone.html  architecture.md  glossary.md  requirements.md  todo-enhancement.md
proto/: README.md  __init__.py  errors.json
scripts/: dev.sh  migrate_users_v1.ts  pack_kline.py  try_qwen_search.py
services/py/: pyproject.toml
services/py/quant_cache/: __init__.py  errors.py  file_kv_store.py  flat_prefix_kline_repo.py  kline_schema.py  parquet_kline_repo.py  parquet_record_repo.py  parquet_sentiment_cache.py  parquet_stock_meta_repo.py  parquet_ta_cache.py  sentiment_schema.py  stock_meta_schema.py  ta_schema.py
services/py/quant_core/: __init__.py  errors.py
services/py/quant_core/adapters/: __init__.py  clock.py
services/py/quant_core/adapters/pattern/: __init__.py  dtw_engine.py
services/py/quant_core/config/: __init__.py  settings.py
services/py/quant_core/contracts/: __init__.py  errors.py
services/py/quant_core/domain/: __init__.py
services/py/quant_core/domain/pure/: __init__.py  compute_metrics.py  decimal.py  derive_metrics.py  greet.py  notification_route.py  pattern.py  signal_eval.py
services/py/quant_core/domain/rules/: kline_assemble.py  ma.py  qfq.py  screen_compile.py  screen_eval.py  screen_parse.py  universe_eval.py  universe_parse.py
services/py/quant_core/domain/types/: __init__.py  fund_flow.py  kline.py  ledger.py  notification.py  pattern.py  query.py  screen.py  sentiment.py  signal_eval.py  source.py  stock.py  ta.py  universe_screen.py  watch.py
services/py/quant_core/ports/: __init__.py  cache.py  clock.py  kline_repo.py  kline_source.py  llm_client.py  notifier.py  pattern_engine.py  sentiment_cache.py  stock_meta_repo.py  stock_meta_source.py  ta_cache.py  watch_quote_source.py
services/py/quant_core/prompts/: __init__.py  ledger_prompts.py  news_sentiment.py  nl_to_dsl.py  ta_prompts.py
services/py/quant_core/services/: blacklist_service.py  financials_service.py  kline_service.py  ledger_service.py  news_sentiment_service.py  nl_to_dsl_service.py  notification_service.py  pattern_service.py  screen_service.py  screening_pipeline.py  source_chain.py  stock_meta_service.py  stock_meta_sync_service.py  ta_service.py  universe_screen_service.py  watch_quote_service.py
services/py/quant_io/: __init__.py  pinyin.py
services/py/quant_io/llm/: deepseek_client.py  fallback.py  openai_compatible.py  providers.py
services/py/quant_io/notify/: __init__.py  slack_webhook.py
services/py/quant_io/sources/: __init__.py  _common.py  _watch_common.py  akshare_financials.py  akshare_kline.py  akshare_stock_fund_flow.py  akshare_stock_meta.py  akshare_watch.py  routed_watch.py  tushare_stock_meta.py  yfinance_watch.py
services/py/quant_rpc/: __init__.py  __main__.py  errors.py  handlers.py  main.py  middleware.py  server.py  trace.py
services/py/quant_rpc/ops/: __init__.py  blacklist.py  financials.py  kline.py  kline_read.py  ledger.py  nl_screen.py  pattern.py  screen_ops.py  sentiment.py  signal_eval.py  stock_fund_flow.py  stock_meta.py  stock_meta_admin.py  stock_metrics.py  stock_snapshot.py  ta.py  trading_calendar.py  watch.py
services/py/tests/: conftest.py
services/py/tests/_util/: __init__.py  clock.py  fake_source.py  kline_seeder.py  stock_meta_fixtures.py  stock_meta_seeder.py
services/py/tests/contract/: test_error_codes.py
services/py/tests/contract/cache/: kv_store_contract.py  record_repo_contract.py  test_file_kv_store.py  test_parquet_record_repo.py
services/py/tests/contract/rpc/: test_flight_server.py
services/py/tests/e2e/: test_nl_to_pipeline_e2e.py
services/py/tests/integration/: test_compute_stock_metrics.py  test_kline_repo_and_service.py  test_notification_service.py  test_parquet_stock_meta_repo.py  test_pattern_engine.py  test_screen_rank_and_evidence.py  test_screen_service.py  test_screening_pipeline.py  test_stock_meta_sync_service.py  test_upsert_stock_metrics.py
services/py/tests/unit/: test_cache_errors.py  test_clock.py  test_errors.py  test_greet.py  test_query_spec.py
services/py/tests/unit/proto/: test_codegen_schema.py
services/py/tests/unit/quant_cache/: test_parquet_sentiment_cache.py  test_stock_meta_schema.py
services/py/tests/unit/quant_core/: test_notification_route.py  test_pattern_pure.py
services/py/tests/unit/quant_core/domain/pure/: test_compute_metrics.py  test_decimal.py  test_derive_metrics.py  test_signal_eval.py
services/py/tests/unit/quant_core/domain/rules/: test_ma.py  test_qfq.py  test_screen_compile.py  test_screen_eval.py  test_screen_parse.py  test_universe_eval.py
services/py/tests/unit/quant_core/services/: test_blacklist_service.py  test_financials_service.py  test_ledger_service.py  test_news_sentiment_service.py  test_source_chain.py  test_stock_meta_service.py  test_ta_service.py
services/py/tests/unit/quant_io/: test_akshare_stock_meta.py  test_fallback.py  test_providers.py  test_slack_webhook.py  test_tushare_stock_meta.py
services/py/tests/unit/quant_io/sources/: test_akshare_financials.py  test_akshare_stock_fund_flow.py  test_akshare_watch.py  test_routed_watch.py  test_yfinance_watch.py
services/py/tests/unit/quant_rpc/: test_errors.py  test_handlers.py  test_middleware.py  test_server_dispatch.py  test_trace.py
services/py/tests/unit/quant_rpc/ops/: test_ledger.py  test_signal_eval.py  test_stock_fund_flow.py  test_stock_meta.py  test_stock_meta_admin.py  test_stock_snapshot.py  test_trading_calendar.py
(+6432 files in other folders)
