[project]
name = "quant-py"
version = "0.0.0"
requires-python = ">=3.11"
description = "Quant compute, IO, cache, workflow, and RPC services"
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Cache layer (M3): pyarrow only used in TimeSeriesStore Protocol annotations
    # at this milestone; filelock guards per-key concurrent writes for FileKeyValueStore.
    "pyarrow>=18.0",
    "filelock>=3.16",
    # Used by IO source adapters to derive `name_pinyin` from a Chinese
    # company name. Pure-Python, no native deps.
    "pypinyin>=0.55",
    "polars>=1.40.1",
    "duckdb>=1.5.2",
    "openai>=2.33.0",
    # Watch (W-0) US realtime quotes fallback. East Money / Sina (the
    # backends akshare proxies for US tickers) have been IP-blocking
    # the Flight server host; Yahoo sits on a separate IP family.
    "yfinance>=0.2.50",
    # Chrome TLS-fingerprint impersonation for the yfinance session.
    # Without this, Yahoo aggressively rate-limits the default
    # `requests` UA + fingerprint and returns YFRateLimitError.
    "curl-cffi>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_core", "quant_cache", "quant_io", "quant_rpc"]
